--- a/socialsystem/pages/templates/flatpages/home.html
+++ b/socialsystem/pages/templates/flatpages/home.html
@@ -48,8 +48,8 @@
                     </div>
                     <div class="productleader__about">
                         <p>
-                            PhDr. Olga Richterová, PhD. (* 21. ledna 1985), poslankyně Parlamentu ČR za Piráty.
-                            Je místopředsedkyní Výboru pro sociální politiku, členkou Výboru zdravotního a Stálé komise pro rodinu, rovné příležitosti a národnostní menšiny. Věnuje se také problematice <a href="http://www.bydlimevsichni.cz" class="t-anchor" target="_blank" rel="noopener">dostupného bydlení</a>.
+                            PhDr. Olga Richterová, PhD. (* 21. ledna 1985), je místopředsedkyní Poslanecké sněmovny.
+                            V Poslanecké sněmovně působí v druhém volebním období. Před výkonem funkce poslankyně byla zastupitelkou městské části Praha 10. Je dlouholetou bojovnicí za práva občanů a autorkou mnoha úprav, zejména v oblasti sociálního práva.
                         </p>
                     </div>
                 </div>
